--- a/sass/_navbar.scss
+++ b/sass/_navbar.scss
@@ -54,7 +54,7 @@
     &-toggle{
         position: fixed;
         top: 5rem;
-        right: 10rem;
+        right: 5rem;
         background-color: var(--accent-200);
         z-index: 2000;
         border-radius: 50%;
