--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -102,8 +102,7 @@
 
       @media only screen and (max-width:$bp-small){
         height: 100%;
-        object-fit: cover;
-
+        object-fit: contain;
       }
     }
 
