--- a/sass/main.css
+++ b/sass/main.css
@@ -140,6 +140,7 @@ html {
 .main {
   grid-column: center-start/center-end;
   position: relative;
+  overflow: hidden;
 }
 @media only screen and (max-width: 81.25em) {
   .main {
@@ -299,7 +300,7 @@ html {
 .nav-toggle {
   position: fixed;
   top: 5rem;
-  right: 10rem;
+  right: 5rem;
   background-color: var(--accent-200);
   z-index: 2000;
   border-radius: 50%;
@@ -637,8 +638,8 @@ html {
 @media only screen and (max-width: 50em) {
   .project-card__image {
     height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
 }
 .project-card__title {
